Refactor: Replaced screen width-based calculation with column width in createEllipsisLabel method.